fix padding on mobile nav

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -147,7 +147,7 @@ img {
 				top: 25px;
 				right: 0;
 				width: 290px;
-				padding: 10px;
+				padding: 20px;
 				background: #fff;
 				color: #333;
 				.box-shadow(1px 1px 3px rgba(0,0,0,0.1));
